--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                 </select>
               </div>
             </div>
+            <div id="movieStatus" class="movie-status" aria-live="polite"></div>
             <div id="movieList" class="decision-container"></div>
           </div>
           <div id="savedMoviesSection" style="display:none;">
