--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
             <h2>Live Music</h2>
             <button type="button" class="icon-btn tab-hide-btn" title="Hide Tab">🕒</button>
           </div>
-          <div id="songkickForm" style="margin-bottom:1rem;">
-            <input type="password" id="songkickApiKey" placeholder="Songkick API Key" style="margin-right:.5rem;">
-            <button type="button" id="songkickDiscoverBtn" class="shows-discover-btn">Discover</button>
+          <div id="eventbriteForm" style="margin-bottom:1rem;">
+            <input type="password" id="eventbriteApiToken" placeholder="Eventbrite API token" style="margin-right:.5rem;">
+            <button type="button" id="eventbriteDiscoverBtn" class="shows-discover-btn">Discover</button>
           </div>
           <div id="showsConfigControls" class="shows-config">
             <div class="shows-config__field">
@@ -166,10 +166,10 @@
             <button type="button" class="movie-tab shows-tab" data-target="showsInterestedSection">Your Live Music Events</button>
           </div>
           <div id="showsFeedSection">
-            <div id="songkickList" class="decision-container"></div>
+            <div id="eventbriteList" class="decision-container"></div>
           </div>
           <div id="showsInterestedSection" style="display:none;">
-            <div id="songkickInterestedList" class="decision-container"></div>
+            <div id="eventbriteInterestedList" class="decision-container"></div>
           </div>
           <div class="shows-spotify-footer">
             <span id="spotifyStatus" class="shows-status"></span>
