--- a/index.html
+++ b/index.html
@@ -199,11 +199,9 @@
                   placeholder="e.g. 2024"
                 />
               </div>
-              <div class="movie-filter-field">
-                <label for="tvFilterGenre">Genre</label>
-                <select id="tvFilterGenre" name="tvFilterGenre">
-                  <option value="">All Genres</option>
-                </select>
+              <div class="movie-filter-field movie-filter-genre">
+                <span class="movie-filter-label">Genre</span>
+                <div id="tvFilterGenre" class="genre-filter"></div>
               </div>
             </div>
             <div id="tvStatus" class="movie-status" aria-live="polite"></div>
