Add dancing loader animation for TV feed

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 </select>
               </div>
             </div>
-            <div id="tvStatus" class="movie-status" aria-live="polite"></div>
+            <div id="tvStatus" class="movie-status tv-status" aria-live="polite"></div>
             <div id="tvList" class="decision-container"></div>
           </div>
           <div id="savedTvSection" style="display:none;">
