Display Eventbrite API response in Live Music panel

--- a/index.html
+++ b/index.html
@@ -249,6 +249,10 @@
             </p>
           </div>
           <div id="eventbriteStatus" class="shows-status" role="status" aria-live="polite"></div>
+          <details id="eventbriteDebug" class="shows-debug" hidden>
+            <summary>Latest API response</summary>
+            <pre id="eventbriteDebugOutput" class="shows-debug__output" aria-live="polite"></pre>
+          </details>
           <div id="eventbriteList" class="decision-container"></div>
         </div>
       </div>
