--- a/index.html
+++ b/index.html
@@ -263,6 +263,23 @@
             <h2>Restaurants</h2>
             <button type="button" class="icon-btn tab-hide-btn" title="Hide Tab">🕒</button>
           </div>
+          <div class="restaurants-controls">
+            <label class="restaurants-controls__label" for="yelpApiKeyInput">
+              Yelp API Key
+            </label>
+            <input
+              type="password"
+              id="yelpApiKeyInput"
+              class="restaurants-controls__input"
+              placeholder="Yelp Fusion API Key"
+              autocomplete="off"
+              spellcheck="false"
+              aria-describedby="yelpApiKeyHelp"
+            >
+            <p id="yelpApiKeyHelp" class="restaurants-api-help">
+              Store your Yelp Fusion API key locally to enable nearby restaurant search. You can also configure <code>YELP_API_KEY</code> on the server instead.
+            </p>
+          </div>
       <div class="restaurants-layout">
         <div
           id="restaurantsMap"
