--- a/index.html
+++ b/index.html
@@ -49,71 +49,73 @@
             <h2>Movies</h2>
             <button type="button" class="icon-btn tab-hide-btn" title="Hide Tab">🕒</button>
           </div>
-          <div id="moviesForm" style="margin-bottom:1rem;">
-            <div id="moviesApiKeyContainer" style="display:inline-block;">
-              <input type="password" id="moviesApiKey" placeholder="TMDB API Key" style="margin-right:.5rem;">
-            </div>
-          </div>
           <div id="movieTabs" class="movie-tabs">
             <button class="movie-tab active" data-target="movieStreamSection">Movie Stream</button>
             <button class="movie-tab" data-target="savedMoviesSection">Saved Movies</button>
             <button class="movie-tab" data-target="watchedMoviesSection">Watched Movies</button>
           </div>
-          <div id="movieStreamSection">
-            <div id="movieFeedControls" class="movie-controls movie-filter-controls">
-              <div class="movie-filter-field">
-                <label for="movieFilterMinRating">Min Rating</label>
-                <input
-                  type="number"
-                  id="movieFilterMinRating"
-                  name="movieFilterMinRating"
-                  min="0"
-                  max="10"
-                  step="0.1"
-                  inputmode="decimal"
-                  placeholder="e.g. 7"
-                />
+        <div id="movieStreamSection">
+          <div class="media-stream">
+            <aside class="media-stream__filters">
+              <div id="movieFeedControls" class="movie-controls movie-filter-controls">
+                <div class="movie-filter-field">
+                  <label for="movieFilterMinRating">Min Rating</label>
+                  <input
+                    type="number"
+                    id="movieFilterMinRating"
+                    name="movieFilterMinRating"
+                    min="0"
+                    max="10"
+                    step="0.1"
+                    inputmode="decimal"
+                    placeholder="e.g. 7"
+                  />
+                </div>
+                <div class="movie-filter-field">
+                  <label for="movieFilterMinVotes">Min Votes</label>
+                  <input
+                    type="number"
+                    id="movieFilterMinVotes"
+                    name="movieFilterMinVotes"
+                    min="0"
+                    step="1"
+                    inputmode="numeric"
+                    placeholder="e.g. 100"
+                  />
+                </div>
+                <div class="movie-filter-field">
+                  <label for="movieFilterStartYear">Earliest Year</label>
+                  <input
+                    type="number"
+                    id="movieFilterStartYear"
+                    name="movieFilterStartYear"
+                    inputmode="numeric"
+                    placeholder="e.g. 2010"
+                  />
+                </div>
+                <div class="movie-filter-field">
+                  <label for="movieFilterEndYear">Latest Year</label>
+                  <input
+                    type="number"
+                    id="movieFilterEndYear"
+                    name="movieFilterEndYear"
+                    inputmode="numeric"
+                    placeholder="e.g. 2024"
+                  />
+                </div>
+                <div class="movie-filter-field movie-filter-genre">
+                  <span class="movie-filter-label">Genre</span>
+                  <div id="movieFilterGenre" class="genre-filter"></div>
+                </div>
               </div>
-              <div class="movie-filter-field">
-                <label for="movieFilterMinVotes">Min Votes</label>
-                <input
-                  type="number"
-                  id="movieFilterMinVotes"
-                  name="movieFilterMinVotes"
-                  min="0"
-                  step="1"
-                  inputmode="numeric"
-                  placeholder="e.g. 100"
-                />
-              </div>
-              <div class="movie-filter-field">
-                <label for="movieFilterStartYear">Earliest Year</label>
-                <input
-                  type="number"
-                  id="movieFilterStartYear"
-                  name="movieFilterStartYear"
-                  inputmode="numeric"
-                  placeholder="e.g. 2010"
-                />
-              </div>
-              <div class="movie-filter-field">
-                <label for="movieFilterEndYear">Latest Year</label>
-                <input
-                  type="number"
-                  id="movieFilterEndYear"
-                  name="movieFilterEndYear"
-                  inputmode="numeric"
-                  placeholder="e.g. 2024"
-                />
-              </div>
-              <div class="movie-filter-field movie-filter-genre">
-                <span class="movie-filter-label">Genre</span>
-                <div id="movieFilterGenre" class="genre-filter"></div>
-              </div>
-            </div>
-            <div id="movieStatus" class="movie-status" aria-live="polite"></div>
-            <div id="movieList" class="decision-container"></div>
+              <div id="movieStats" class="media-stats" aria-live="polite"></div>
+            </aside>
+            <section class="media-stream__content">
+              <div id="movieStatus" class="movie-status" aria-live="polite"></div>
+              <div id="movieList" class="decision-container"></div>
+            </section>
           </div>
+        </div>
           <div id="savedMoviesSection" style="display:none;">
             <div id="savedMoviesFilters" class="genre-filter"></div>
             <div id="savedMoviesList" class="decision-container"></div>
@@ -142,71 +144,73 @@
             <h2>TV Shows</h2>
             <button type="button" class="icon-btn tab-hide-btn" title="Hide Tab">🕒</button>
           </div>
-          <div id="tvForm" style="margin-bottom:1rem;">
-            <div id="tvApiKeyContainer" style="display:inline-block;">
-              <input type="password" id="tvApiKey" placeholder="TMDB API Key" style="margin-right:.5rem;">
-            </div>
-          </div>
           <div id="tvTabs" class="movie-tabs">
             <button class="movie-tab active" data-target="tvStreamSection">Show Stream</button>
             <button class="movie-tab" data-target="savedTvSection">Saved Shows</button>
             <button class="movie-tab" data-target="watchedTvSection">Watched Shows</button>
           </div>
-          <div id="tvStreamSection">
-            <div id="tvFeedControls" class="movie-controls movie-filter-controls">
-              <div class="movie-filter-field">
-                <label for="tvFilterMinRating">Min Rating</label>
-                <input
-                  type="number"
-                  id="tvFilterMinRating"
-                  name="tvFilterMinRating"
-                  min="0"
-                  max="10"
-                  step="0.1"
-                  inputmode="decimal"
-                  placeholder="e.g. 7"
-                />
+        <div id="tvStreamSection">
+          <div class="media-stream">
+            <aside class="media-stream__filters">
+              <div id="tvFeedControls" class="movie-controls movie-filter-controls">
+                <div class="movie-filter-field">
+                  <label for="tvFilterMinRating">Min Rating</label>
+                  <input
+                    type="number"
+                    id="tvFilterMinRating"
+                    name="tvFilterMinRating"
+                    min="0"
+                    max="10"
+                    step="0.1"
+                    inputmode="decimal"
+                    placeholder="e.g. 7"
+                  />
+                </div>
+                <div class="movie-filter-field">
+                  <label for="tvFilterMinVotes">Min Votes</label>
+                  <input
+                    type="number"
+                    id="tvFilterMinVotes"
+                    name="tvFilterMinVotes"
+                    min="0"
+                    step="1"
+                    inputmode="numeric"
+                    placeholder="e.g. 100"
+                  />
+                </div>
+                <div class="movie-filter-field">
+                  <label for="tvFilterStartYear">Earliest Year</label>
+                  <input
+                    type="number"
+                    id="tvFilterStartYear"
+                    name="tvFilterStartYear"
+                    inputmode="numeric"
+                    placeholder="e.g. 2010"
+                  />
+                </div>
+                <div class="movie-filter-field">
+                  <label for="tvFilterEndYear">Latest Year</label>
+                  <input
+                    type="number"
+                    id="tvFilterEndYear"
+                    name="tvFilterEndYear"
+                    inputmode="numeric"
+                    placeholder="e.g. 2024"
+                  />
+                </div>
+                <div class="movie-filter-field movie-filter-genre">
+                  <span class="movie-filter-label">Genre</span>
+                  <div id="tvFilterGenre" class="genre-filter"></div>
+                </div>
               </div>
-              <div class="movie-filter-field">
-                <label for="tvFilterMinVotes">Min Votes</label>
-                <input
-                  type="number"
-                  id="tvFilterMinVotes"
-                  name="tvFilterMinVotes"
-                  min="0"
-                  step="1"
-                  inputmode="numeric"
-                  placeholder="e.g. 100"
-                />
-              </div>
-              <div class="movie-filter-field">
-                <label for="tvFilterStartYear">Earliest Year</label>
-                <input
-                  type="number"
-                  id="tvFilterStartYear"
-                  name="tvFilterStartYear"
-                  inputmode="numeric"
-                  placeholder="e.g. 2010"
-                />
-              </div>
-              <div class="movie-filter-field">
-                <label for="tvFilterEndYear">Latest Year</label>
-                <input
-                  type="number"
-                  id="tvFilterEndYear"
-                  name="tvFilterEndYear"
-                  inputmode="numeric"
-                  placeholder="e.g. 2024"
-                />
-              </div>
-              <div class="movie-filter-field movie-filter-genre">
-                <span class="movie-filter-label">Genre</span>
-                <div id="tvFilterGenre" class="genre-filter"></div>
-              </div>
-            </div>
-            <div id="tvStatus" class="movie-status tv-status" aria-live="polite"></div>
-            <div id="tvList" class="decision-container"></div>
+              <div id="tvStats" class="media-stats" aria-live="polite"></div>
+            </aside>
+            <section class="media-stream__content">
+              <div id="tvStatus" class="movie-status tv-status" aria-live="polite"></div>
+              <div id="tvList" class="decision-container"></div>
+            </section>
           </div>
+        </div>
           <div id="savedTvSection" style="display:none;">
             <div id="savedTvFilters" class="genre-filter"></div>
             <div id="savedTvList" class="decision-container"></div>
